--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <modules>
         <module>restful</module>
         <module>cache</module>
+        <module>dataProcessing</module>
+        <module>utils</module>
     </modules>
 
 
@@ -21,9 +23,11 @@
         <java.version>17</java.version>
         <spljt.version>0.1.0</spljt.version>
         <swagger.version>3.0.0</swagger.version>
-        <swagger-ui.version>2.0.2</swagger-ui.version>
+        <swagger-ui.version>3.0.3</swagger-ui.version>
         <spring.boot.version>2.6.0</spring.boot.version>
         <lombok.version>1.18.22</lombok.version>
+        <mybatis.version>2.2.0</mybatis.version>
+        <gson.version>2.8.5</gson.version>
     </properties>
 
 
