--- a/dataProcessing/pom.xml
+++ b/dataProcessing/pom.xml
@@ -15,7 +15,7 @@
     <properties>
         <java.version>17</java.version>
         <jpa-spec.version>3.2.4</jpa-spec.version>
-        <pageHelper.version>1.4.0</pageHelper.version>
+        <pageHelper.version>1.4.2</pageHelper.version>
     </properties>
 
 
@@ -29,11 +29,7 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>${swagger.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>${swagger.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
