--- a/oss/pom.xml
+++ b/oss/pom.xml
@@ -14,7 +14,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <minio.version>7.0.2</minio.version>
+        <minio.version>8.3.8</minio.version>
     </properties>
 
     <dependencies>
@@ -27,11 +27,7 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>${swagger.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>${swagger.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
