--- a/dataProcessing/pom.xml
+++ b/dataProcessing/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>restful</artifactId>
             <version>${spljt.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <version>${spring.boot.version}</version>
+        </dependency>
     </dependencies>
 
 
