--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,7 @@
 
 
     <properties>
-        <maven.compiler.target>17</maven.compiler.target>
-        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>17</java.version>
         <spljt.version>0.1.0</spljt.version>
@@ -31,6 +30,16 @@
         <mybatis.version>2.2.0</mybatis.version>
         <gson.version>2.8.5</gson.version>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
