--- a/dataProcessing/pom.xml
+++ b/dataProcessing/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.longpengz</groupId>
+        <groupId>com.splto</groupId>
         <artifactId>spljt-parent</artifactId>
         <version>0.2.0</version>
     </parent>
@@ -52,7 +52,7 @@
             <version>${gson.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.longpengz</groupId>
+            <groupId>com.splto</groupId>
             <artifactId>restful</artifactId>
             <version>${spljt.version}</version>
         </dependency>
