--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
-    <groupId>com.longpengz</groupId>
+    <groupId>com.splto</groupId>
     <artifactId>spljt-parent</artifactId>
     <version>0.2.0</version>
     <name>spljt-parent</name>
