--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -24,8 +24,9 @@
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
+            <artifactId>springfox-boot-starter</artifactId>
             <version>${swagger.version}</version>
+            <scope>provided</scope>
         </dependency>
 
 
