--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <java.version>17</java.version>
+        <gson.version>2.10.1</gson.version>
     </properties>
 
     <dependencies>
@@ -28,7 +29,11 @@
             <version>${swagger.version}</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
 
     </dependencies>
 
