--- a/dataProcessing/pom.xml
+++ b/dataProcessing/pom.xml
@@ -47,9 +47,9 @@
             <version>${pageHelper.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>${gson.version}</version>
+            <groupId>com.splto</groupId>
+            <artifactId>utils</artifactId>
+            <version>${spljt.version}</version>
         </dependency>
         <dependency>
             <groupId>com.splto</groupId>
