--- a/restful/pom.xml
+++ b/restful/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>spring-boot-starter-validation</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.splto</groupId>
+            <artifactId>utils</artifactId>
+            <version>${spljt.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
