--- a/pom.xml
+++ b/pom.xml
@@ -5,31 +5,19 @@
     <packaging>pom</packaging>
     <groupId>com.splto</groupId>
     <artifactId>spljt-parent</artifactId>
-    <version>0.2.0</version>
+    <version>1.0.0</version>
     <name>spljt-parent</name>
     <description>Sweet-Potato-Leaf Java Tool</description>
 
     <modules>
+        <module>spljt-common</module>
+        <module>spljt-pom</module>
         <module>restful</module>
         <module>cache</module>
         <module>dataProcessing</module>
         <module>utils</module>
         <module>oss</module>
     </modules>
-
-
-    <properties>
-        <maven.compiler.release>17</maven.compiler.release>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>17</java.version>
-        <spljt.version>0.2.0</spljt.version>
-        <swagger.version>3.0.0</swagger.version>
-        <swagger-ui.version>3.0.3</swagger-ui.version>
-        <spring.boot.version>2.7.8</spring.boot.version>
-        <lombok.version>1.18.22</lombok.version>
-        <mybatis.version>2.2.0</mybatis.version>
-        <gson.version>2.8.5</gson.version>
-    </properties>
 
     <build>
         <plugins>
